Switch to hosted zone ID refs to avoid conflicts

--- a/etc/prx.mx-hosted_zone.yml
+++ b/etc/prx.mx-hosted_zone.yml
@@ -18,10 +18,9 @@ Resources:
       Name: !Ref Domain
   Website:
     Type: "AWS::Route53::RecordSetGroup"
-    DependsOn: HostedZone
     Properties:
       Comment: WWW
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - Type: A
           Name: !Ref Domain
