--- a/etc/prx.org-hosted_zone.yml
+++ b/etc/prx.org-hosted_zone.yml
@@ -17,7 +17,6 @@ Resources:
       #     Value: radiotopia.fm
       Name: !Ref Domain
   Text:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       # Route53 expects TXT record values to be enclosed in double quotes, so in
@@ -26,7 +25,7 @@ Resources:
       # resource records if necessary.
       # All SPF records need to go into a single resource record.
       Comment: TXT Records
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - '"status-page-domain-verification=6n18jv5h9b5d"'
@@ -46,11 +45,10 @@ Resources:
           Type: TXT
           Name: !Sub google._domainkey.${Domain}
   Highwinds:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: CNAME records for Highwinds sites
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - cds.b3j2v5n8.hwcdn.net.
@@ -313,11 +311,10 @@ Resources:
           Type: CNAME
           Name: !Sub cdn.saltcast.${Domain}
   DotTech:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Public-facing domains for apps managed on .tech
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - backsaw.prx.tech.
@@ -345,11 +342,10 @@ Resources:
           Type: CNAME
           Name: !Sub feeder.${Domain}
   PrxDotOrg:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: prx.org and www.prx.org
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - "199.119.122.237"
@@ -362,11 +358,10 @@ Resources:
           Type: A
           Name: !Sub www.${Domain}
   DotOrg:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Legacy prx.org subdomains
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - !Sub id.${Domain}
@@ -409,11 +404,10 @@ Resources:
           Type: A
           Name: !Sub fixer.${Domain}
   Contegix:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Contegix servers
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - prx01.managed.contegix.com.
@@ -426,11 +420,10 @@ Resources:
           Type: CNAME
           Name: !Sub prx04.${Domain}
   Static:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Static assets
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - media.prx.org.s3.amazonaws.com.
@@ -443,11 +436,10 @@ Resources:
             DNSName: d11pcyef3meeu9.cloudfront.net.
             HostedZoneId: Z2FDTNDATAQYW2
   Localhost:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Localhost
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - "127.0.0.1"
@@ -455,11 +447,10 @@ Resources:
           Type: A
           Name: !Sub localhost.${Domain}
   Prx01:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: PRX01
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - "199.119.122.228"
@@ -572,11 +563,10 @@ Resources:
           Type: A
           Name: !Sub count.${Domain}
   Prx02:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: PRX02
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - "199.119.122.230"
@@ -839,11 +829,10 @@ Resources:
           Type: A
           Name: !Sub offshore.${Domain}
   Prx03:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: PRX03
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - "199.119.122.231"
@@ -856,11 +845,10 @@ Resources:
           Type: A
           Name: !Sub staging.wburapp.${Domain}
   Prx04:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: PRX04
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - "199.119.122.232"
@@ -903,11 +891,10 @@ Resources:
           Type: A
           Name: !Sub id.${Domain}
   Studs:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Studs
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - !Sub studs.${Domain}
@@ -1000,11 +987,10 @@ Resources:
           Type: CNAME
           Name: !Sub ws.${Domain}
   Ed:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Ed
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - !Sub ed.${Domain}
@@ -1107,11 +1093,10 @@ Resources:
           Type: CNAME
           Name: !Sub www.qa.${Domain}
   Orson:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Orson
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - !Sub orson.${Domain}
@@ -1124,11 +1109,10 @@ Resources:
           Type: CNAME
           Name: !Sub planet.${Domain}
   Legacy:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Various legacy resources
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - s3.amazonaws.com.
@@ -1191,11 +1175,10 @@ Resources:
           Type: CNAME
           Name: !Sub generation.${Domain}
   Unbounce:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Unbounce
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - unbouncepages.com.
@@ -1203,11 +1186,10 @@ Resources:
           Type: CNAME
           Name: !Sub try.${Domain}
   Feedburner:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Feedburner
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - io25k.feedproxy.ghs.google.com.
@@ -1215,11 +1197,10 @@ Resources:
           Type: CNAME
           Name: !Sub feeds.${Domain}
   GitHub:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: GitHub
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - prx.github.io.
@@ -1227,11 +1208,10 @@ Resources:
           Type: CNAME
           Name: !Sub labs.${Domain}
   Bitly:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Bitly
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - cname.bitly.com.
@@ -1239,11 +1219,10 @@ Resources:
           Type: CNAME
           Name: !Sub on.${Domain}
   Fixer:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Fixer
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             # TODO Could be an A ALIAS
@@ -1252,11 +1231,10 @@ Resources:
           Type: CNAME
           Name: !Sub alpha-fixer.${Domain}
   Cambridge:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Cambridge Office
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - "74.94.129.158"
@@ -1264,11 +1242,10 @@ Resources:
           Type: A
           Name: !Sub cambridge.${Domain}
   Chef:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Chef
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - "107.21.98.161"
@@ -1291,11 +1268,10 @@ Resources:
           Type: A
           Name: !Sub jenkins.${Domain}
   HowSound:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: HowSound
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - howsound.prx.netdna-cdn.com.
@@ -1303,11 +1279,10 @@ Resources:
           Type: CNAME
           Name: !Sub cdn.howsound.${Domain}
   TheMoth:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: The Moth
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - pc-a.bitgravity.com.
@@ -1320,11 +1295,10 @@ Resources:
           Type: CNAME
           Name: !Sub assets.themoth.${Domain}
   AmazonSes:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: SES DKIM
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - gzyw7nc2rjfy5u6qplqkbbfuv4tdg5mc.dkim.amazonses.com.
@@ -1342,11 +1316,10 @@ Resources:
           Type: CNAME
           Name: !Sub dqoamfgwjnqyjzoe2rrvwkluoh7ee46v._domainkey.${Domain}
   Statuspage:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Statuspage
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - zlzvfpy9x7fy.stspg-customer.com.
@@ -1354,11 +1327,10 @@ Resources:
           Type: CNAME
           Name: !Sub status.${Domain}
   ZenDesk:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: ZenDesk
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - unbouncepages.com.
@@ -1366,11 +1338,10 @@ Resources:
           Type: CNAME
           Name: !Sub help.${Domain}
   Squarespace:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Squarespace
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - verify.squarespace.com.
@@ -1383,11 +1354,10 @@ Resources:
           Type: CNAME
           Name: !Sub catapult.${Domain}
   GSuite:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: G Suite
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - ghs.googlehosted.com.
