--- a/etc/prxu.org-hosted_zone.yml
+++ b/etc/prxu.org-hosted_zone.yml
@@ -17,7 +17,6 @@ Resources:
       #     Value: radiotopia.fm
       Name: !Ref Domain
   Text:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       # Route53 expects TXT record values to be enclosed in double quotes, so in
@@ -26,7 +25,7 @@ Resources:
       # resource records if necessary.
       # All SPF records need to go into a single resource record.
       Comment: TXT Records
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - '"R69rwoxwHEe6ubbq/suATEEFndpJN2M/uGpqqmP4kHE="'
@@ -39,11 +38,10 @@ Resources:
           Type: TXT
           Name: !Sub dzc.${Domain}
   Dovetail:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Dovetail
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - Type: A
           Name: !Sub dovetail.${Domain}
@@ -76,11 +74,10 @@ Resources:
             DNSName: dualstack.infra-dovet-1y2ncjszlrdmz-1988316390.us-east-1.elb.amazonaws.com.
             HostedZoneId: Z35SXDOTRQ7X7K
   Mx:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: MX Records
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - "10 inbound-smtp.us-east-1.amazonaws.com."
@@ -88,11 +85,10 @@ Resources:
           Type: MX
           Name: !Ref Domain
   CloudFront:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: CloudFront
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - dsn15m3yob5tf.cloudfront.net.
@@ -100,11 +96,10 @@ Resources:
           Type: CNAME # TODO Could be A ALIAS
           Name: !Sub userupload.${Domain}
   Highwinds:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Highwinds
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - cds.q5s4q5h8.hwcdn.net.
