--- a/etc/radiotopia.fm-hosted_zone.yml
+++ b/etc/radiotopia.fm-hosted_zone.yml
@@ -17,7 +17,6 @@ Resources:
           Value: radiotopia.fm
       Name: !Ref Domain
   Text:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       # Route53 expects TXT record values to be enclosed in double quotes, so in
@@ -26,7 +25,7 @@ Resources:
       # resource records if necessary.
       # All SPF records need to go into a single resource record.
       Comment: TXT Records
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - '"google-site-verification=zFRPkYoCbmLhpl-z3WCBzd0uUXdlP50m39evhsNZHKQ"'
@@ -35,11 +34,10 @@ Resources:
           Type: TXT
           Name: !Ref Domain
   GSuite:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: G Suite
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - "1 ASPMX.L.GOOGLE.COM."
@@ -51,11 +49,10 @@ Resources:
           Type: MX
           Name: !Ref Domain
   Squarespace:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Squarespace
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - "198.185.159.144"
@@ -76,11 +73,10 @@ Resources:
           Type: CNAME
           Name: !Sub 8k7w47c5y878fddxzmfk.${Domain}
   MailChimp:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: MailChimp
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - dkim.mcsv.net.
@@ -88,11 +84,10 @@ Resources:
           Type: CNAME
           Name: !Sub k1._domainkey.${Domain}
   Feedburner:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: MailChimp
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - io25k.feedproxy.ghs.google.com.
@@ -100,11 +95,10 @@ Resources:
           Type: CNAME
           Name: !Sub feeds.${Domain}
   Media:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Media server
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - Type: A
           Name: !Sub media.${Domain}
@@ -119,11 +113,10 @@ Resources:
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
   RadiotopiaRadio:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Radiotopia Radio and API
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - Type: A
           Name: !Sub radio.${Domain}
@@ -150,11 +143,10 @@ Resources:
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
   Legacy:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Radiotopia Radio and API
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - Type: A
           Name: !Sub v1.${Domain}
