--- a/etc/radiotopia.com-hosted_zone.yml
+++ b/etc/radiotopia.com-hosted_zone.yml
@@ -17,11 +17,10 @@ Resources:
           Value: radiotopia.fm
       Name: !Ref Domain
   Website:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: WWW
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - Type: A
           Name: !Ref Domain
@@ -36,7 +35,6 @@ Resources:
             # us-east-1 hosted zone ID
             HostedZoneId: Z3AQBSTGFYJSTF
   Text:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       # Route53 expects TXT record values to be enclosed in double quotes, so in
@@ -45,7 +43,7 @@ Resources:
       # resource records if necessary.
       # All SPF records need to go into a single resource record.
       Comment: TXT Records
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - '"google-site-verification=H6g01JYxody2U98gTwUZVFY1kDz1miktW9DIEDh_f1I"'
@@ -53,11 +51,10 @@ Resources:
           Type: TXT
           Name: !Ref Domain
   GSuite:
-    DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: G Suite
-      HostedZoneName: !Ref Domain
+      HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
             - "1 ASPMX.L.GOOGLE.COM."
