--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -35,7 +35,7 @@ Resources:
         - ResourceRecords:
             - '"status-page-domain-verification=6n18jv5h9b5d"'
             - '"google-site-verification=j5qsGbnU-E37T9lsaAYL1967H0ej6iZAeX_vEWcOA-w"'
-            - '"v=spf1 include:servers.mcsv.net include:_spf.invoicesherpa.com include:spf.mandrillapp.com include:mail.zendesk.com include:_spf.google.com include:amazonses.com include:stspg-customer.com -all"'
+            - '"v=spf1 include:servers.mcsv.net include:_spf.invoicesherpa.com include:mail.zendesk.com include:_spf.google.com include:amazonses.com include:stspg-customer.com -all"'
           TTL: "300"
           Type: TXT
           Name: !Ref Domain
