Alt api.prx.org name for exchange

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -49,6 +49,8 @@ Parameters:
   # Exchange Specific ##########################################################
   ExchangePlatformALBListenerPriorityPrefix:
     Type: String
+  ExchangeApiPlatformALBListenerPriorityPrefix:
+    Type: String
   ExchangeSecretsVersion:
     Type: String
   ExchangeEcrImageTag:
@@ -98,9 +100,11 @@ Resources:
         ContainerMemoryReservation: !Ref ContainerMemoryReservation
         ContainerCpu: !Ref ContainerCpu
         PlatformALBListenerPriorityPrefix: !Ref ExchangePlatformALBListenerPriorityPrefix
+        PlatformALBAltListenerPriorityPrefix: !Ref ExchangeApiPlatformALBListenerPriorityPrefix
         EcrImageTag: !Ref ExchangeEcrImageTag
         SecretsVersion: !Ref ExchangeSecretsVersion
         AppName: "exchange"
+        AltName: "api"
         CreateWorker: "true"
         DesiredWebsProduction: "3"
         DesiredWorkersProduction: "6"
