--- a/stacks/container-apps/web-application.yml
+++ b/stacks/container-apps/web-application.yml
@@ -6,6 +6,7 @@ Conditions:
   CreateWorkerResources: !Equals [!Ref CreateWorker, true]
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
   HasMemoryReservation: !Not [!Equals [!Ref ContainerMemoryReservation, ""]]
+  HasAltName: !Not [!Equals [!Ref AltName, ""]]
 Parameters:
   # VPC ########################################################################
   VPC:
@@ -22,6 +23,8 @@ Parameters:
   PlatformALBHTTPSListenerArn:
     Type: String
   PlatformALBListenerPriorityPrefix:
+    Type: String
+  PlatformALBAltListenerPriorityPrefix:
     Type: String
   # ECS Cluster ################################################################
   ECSCluster:
@@ -62,6 +65,9 @@ Parameters:
   # App ENV #################################################################
   AppName:
     Type: String # castle, crier, cms, feeder
+  AltName:
+    Type: String
+    Default: ""
   SecretsVersion:
     Type: String
   ContainerPort:
@@ -129,6 +135,32 @@ Resources:
             - !Sub ${AppName}.*
       ListenerArn: !Ref PlatformALBHTTPListenerArn
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "00"]]
+  ALBHTTPSAlternateWildcardListenerRule:
+    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+    Condition: HasAltName
+    Properties:
+      Actions:
+        - TargetGroupArn: !Ref ALBTargetGroup
+          Type: forward
+      Conditions:
+        - Field: host-header
+          Values:
+            - !Sub ${AltName}.*
+      ListenerArn: !Ref PlatformALBHTTPSListenerArn
+      Priority: !Join ["", [!Ref PlatformALBAltListenerPriorityPrefix, "00"]]
+  ALBHTTPAlternateWildcardListenerRule:
+    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+    Condition: HasAltName
+    Properties:
+      Actions:
+        - TargetGroupArn: !Ref ALBTargetGroup
+          Type: forward
+      Conditions:
+        - Field: host-header
+          Values:
+            - !Sub ${AltName}.*
+      ListenerArn: !Ref PlatformALBHTTPListenerArn
+      Priority: !Join ["", [!Ref PlatformALBAltListenerPriorityPrefix, "00"]]
   # CloudWatch Alarms
   ALBTargetGroup500Alarm:
     Type: "AWS::CloudWatch::Alarm"
