--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -144,6 +144,8 @@ Mappings:
   ALBListenerRulePriorityMap:
     Exchange:
       prefix: 13
+    ExchangeApi:
+      prefix: 14
     Cms:
       prefix: 15
     Play:
@@ -273,6 +275,7 @@ Resources:
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
         # Exchange
         ExchangePlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Exchange, prefix]
+        ExchangeApiPlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, ExchangeApi, prefix]
         ExchangeEcrImageTag: !Ref ExchangeEcrImageTag
         ExchangeSecretsVersion: !Ref ExchangeSecretsVersion
         # Cms
