--- a/dns/radiotopia.fm-hosted_zone.yml
+++ b/dns/radiotopia.fm-hosted_zone.yml
@@ -225,7 +225,54 @@ Resources:
             DNSName: d3vzcik9lcbfzv.cloudfront.net.
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
-
-
-
-
+  Aws:
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      Comment: AWS ACM, etc
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        - ResourceRecords:
+            - _b9bc3cabdffb748e59ca5978c09d9485.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _dc6d9619021cc31940a1192fda2df1f1.${Domain}
+        - ResourceRecords:
+            - _fc5d225af903e59bec83de07d729d9e6.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _1daaef68a02e2ef714d25935180b8192.feeds.${Domain}
+        - ResourceRecords:
+            - _f84ee6a2d5ebb0fe4d7f3fa1a67d8ac5.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _d08d1dd9ebb8f0903008027de35c7443.media.${Domain}
+        - ResourceRecords:
+            - _751235ff1895ca10dd7cc14055b3dea1.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _50ef77befc9c1519cc2382daddca8d20.plus.${Domain}
+        - ResourceRecords:
+            - _35433c66939db2c77a310172c59b43c2.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _4525099436d18c052c0f5f43a2e8e790.radio.${Domain}
+        - ResourceRecords:
+            - _0394c9305f3b2d2259b6615e5e542092.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _03c84deca74b028065383d62338b2ae9.radiopublic.${Domain}
+        - ResourceRecords:
+            - _c9c7cba0a64dff93660df39aabd91f43.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _942b9c2d7b54df93353882888bb19f35.tower.${Domain}
+        - ResourceRecords:
+            - _4a621ed053272a0ac3952335200703e2.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _9a0de402b0a08bbb89b2bf80baf817cd.v1.${Domain}
+        - ResourceRecords:
+            - _19d9909a7ddd472ac2a76f6651492b15.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _f6f13aacd4c0dd200558803022700890.www.${Domain}
