--- a/db/castle-postgres-instance.yml
+++ b/db/castle-postgres-instance.yml
@@ -105,7 +105,7 @@ Resources:
       AllocatedStorage: !Ref StorageSize
       AllowMajorVersionUpgrade: false
       AutoMinorVersionUpgrade: false
-      BackupRetentionPeriod: "7"
+      BackupRetentionPeriod: 7
       CopyTagsToSnapshot: true
       DBInstanceClass: !Ref InstanceClass
       DBInstanceIdentifier: !Ref InstanceIdentifier
