--- a/etc/dovetail-edge-deploy.yml
+++ b/etc/dovetail-edge-deploy.yml
@@ -261,9 +261,18 @@ Resources:
               OutputArtifacts:
                 - Name: MetaRepoSourceArtifact
               RunOrder: 1
-        - Name: Discovery
+        - Name: Versioning
           Actions:
-            - Name: LambdaVersions
+            - Name: PublishVersions
+              ActionTypeId:
+                Category: Invoke
+                Owner: AWS
+                Provider: Lambda
+                Version: "1"
+              Configuration:
+                FunctionName: !Ref PublishEdgeLambdaVersionsFunction
+              RunOrder: 1
+            - Name: CaptureVersions
               ActionTypeId:
                 Category: Invoke
                 Owner: AWS
@@ -273,7 +282,7 @@ Resources:
                 FunctionName: !Ref DiscoverEdgeLambdaVersionsFunction
               OutputArtifacts:
                 - Name: LambdaVersionsArtifact
-              RunOrder: 1
+              RunOrder: 2
         # - Name: Staging
         #   Actions:
         #     - Name: CreateStagingChangeSet
@@ -386,44 +395,44 @@ Resources:
         #         RoleArn: !GetAtt CloudFormationIamRole.Arn
         #         StackName: !Ref ProductionCloudFormationStackName
         #       RunOrder: 4
-  PipelineInfrastructureRepoGitHubWebhook:
-    Type: AWS::CodePipeline::Webhook
-    Properties:
-      Authentication: GITHUB_HMAC
-      AuthenticationConfiguration:
-        SecretToken: !Ref GitHubWebhookSecret
-      Filters:
-        - JsonPath: "$.ref"
-          # Properties from the target action configuration can be included as
-          # placeholders in this value by surrounding the action configuration
-          # key with curly braces. For example, if the value supplied here is
-          # "refs/heads/{Branch}" and the target action has an action
-          # configuration property called "Branch" with a value of "master",
-          # the MatchEquals value will be evaluated as "refs/heads/master".
-          MatchEquals: "refs/heads/{Branch}"
-      RegisterWithThirdParty: true
-      TargetAction: InfrastructureRepo
-      TargetPipeline: !Ref Pipeline
-      TargetPipelineVersion: !GetAtt Pipeline.Version
-  PipelineMetaRepoGitHubWebhook:
-    Type: AWS::CodePipeline::Webhook
-    Properties:
-      Authentication: GITHUB_HMAC
-      AuthenticationConfiguration:
-        SecretToken: !Ref GitHubWebhookSecret
-      Filters:
-        - JsonPath: "$.ref"
-          # Properties from the target action configuration can be included as
-          # placeholders in this value by surrounding the action configuration
-          # key with curly braces. For example, if the value supplied here is
-          # "refs/heads/{Branch}" and the target action has an action
-          # configuration property called "Branch" with a value of "master",
-          # the MatchEquals value will be evaluated as "refs/heads/master".
-          MatchEquals: "refs/heads/{Branch}"
-      RegisterWithThirdParty: true
-      TargetAction: MetaRepo
-      TargetPipeline: !Ref Pipeline
-      TargetPipelineVersion: !GetAtt Pipeline.Version
+  # PipelineInfrastructureRepoGitHubWebhook:
+  #   Type: AWS::CodePipeline::Webhook
+  #   Properties:
+  #     Authentication: GITHUB_HMAC
+  #     AuthenticationConfiguration:
+  #       SecretToken: !Ref GitHubWebhookSecret
+  #     Filters:
+  #       - JsonPath: "$.ref"
+  #         # Properties from the target action configuration can be included as
+  #         # placeholders in this value by surrounding the action configuration
+  #         # key with curly braces. For example, if the value supplied here is
+  #         # "refs/heads/{Branch}" and the target action has an action
+  #         # configuration property called "Branch" with a value of "master",
+  #         # the MatchEquals value will be evaluated as "refs/heads/master".
+  #         MatchEquals: "refs/heads/{Branch}"
+  #     RegisterWithThirdParty: true
+  #     TargetAction: InfrastructureRepo
+  #     TargetPipeline: !Ref Pipeline
+  #     TargetPipelineVersion: !GetAtt Pipeline.Version
+  # PipelineMetaRepoGitHubWebhook:
+  #   Type: AWS::CodePipeline::Webhook
+  #   Properties:
+  #     Authentication: GITHUB_HMAC
+  #     AuthenticationConfiguration:
+  #       SecretToken: !Ref GitHubWebhookSecret
+  #     Filters:
+  #       - JsonPath: "$.ref"
+  #         # Properties from the target action configuration can be included as
+  #         # placeholders in this value by surrounding the action configuration
+  #         # key with curly braces. For example, if the value supplied here is
+  #         # "refs/heads/{Branch}" and the target action has an action
+  #         # configuration property called "Branch" with a value of "master",
+  #         # the MatchEquals value will be evaluated as "refs/heads/master".
+  #         MatchEquals: "refs/heads/{Branch}"
+  #     RegisterWithThirdParty: true
+  #     TargetAction: MetaRepo
+  #     TargetPipeline: !Ref Pipeline
+  #     TargetPipelineVersion: !GetAtt Pipeline.Version
   # Acceptance Test Pipeline Action
   AcceptanceTestsCodeBuildIamRole:
     Type: AWS::IAM::Role
@@ -575,6 +584,114 @@ Resources:
   #               Resource: "*"
 
   # Pipeline functions
+  PublishEdgeLambdaVersionsFunctionIamRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+      Path: "/"
+      Policies:
+        - PolicyName: LambdaVersionPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - lambda:PublishVersion
+                Resource:
+                  - !Ref StagingStitchLambdaFunctionArn
+                  - !Ref StagingBytesLambdaFunctionArn
+                  - !Ref ProductionStitchLambdaFunctionArn
+                  - !Ref ProductionBytesLambdaFunctionArn
+        - PolicyName: CodePipelinePolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - codepipeline:PutJobSuccessResult
+                  - codepipeline:PutJobFailureResult
+                  - codepipeline:GetPipelineState
+                Resource: "*"
+  PublishEdgeLambdaVersionsFunction:
+    Type: AWS::Lambda::Function
+    Properties:
+      Code:
+        ZipFile: |
+          import boto3
+          import traceback
+          import os
+          from botocore.client import Config
+
+          code_pipeline = boto3.client('codepipeline')
+          lamb = boto3.client('lambda')
+
+
+          def put_job_success(job, message):
+              print('Putting job success')
+              print(message)
+              code_pipeline.put_job_success_result(jobId=job['id'])
+
+
+          def put_job_failure(job, message):
+              print('Putting job failure')
+              print(message)
+              code_pipeline.put_job_failure_result(
+                  jobId=job['id'],
+                  failureDetails={'message': message, 'type': 'JobFailed'})
+
+
+          # Tries to publish new versions of each Lambda function, from their $LATEST
+          # code and configuration. New versions are only created if a any changes have
+          # been made since the most recent version, so it is safe to call this
+          # multiple times
+          def publish_versions():
+              lamb.publish_version(FunctionName=os.environ['STAGING_BYTES_LAMBDA_FUNCTION_ARN'])
+              lamb.publish_version(FunctionName=os.environ['STAGING_STITCH_LAMBDA_FUNCTION_ARN'])
+              lamb.publish_version(FunctionName=os.environ['PRODUCTION_BYTES_LAMBDA_FUNCTION_ARN'])
+              lamb.publish_version(FunctionName=os.environ['PRODUCTION_STITCH_LAMBDA_FUNCTION_ARN'])
+
+
+          def lambda_handler(event, context):
+              try:
+                  job = event['CodePipeline.job']
+
+                  publish_versions()
+
+                  # Cleanup
+                  put_job_success(job, '')
+              except Exception as e:
+                  print('Function failed due to exception.')
+                  print(e)
+                  traceback.print_exc()
+                  put_job_failure(job, 'Function exception: ' + str(e))      Description: tktktktk
+      Handler: index.lambda_handler
+      Environment:
+        Variables:
+          STAGING_STITCH_LAMBDA_FUNCTION_ARN: !Ref StagingStitchLambdaFunctionArn
+          STAGING_BYTES_LAMBDA_FUNCTION_ARN: !Ref StagingBytesLambdaFunctionArn
+          PRODUCTION_STITCH_LAMBDA_FUNCTION_ARN: !Ref ProductionStitchLambdaFunctionArn
+          PRODUCTION_BYTES_LAMBDA_FUNCTION_ARN: !Ref ProductionBytesLambdaFunctionArn
+      MemorySize: 128
+      Role: !GetAtt PublishEdgeLambdaVersionsFunctionIamRole.Arn
+      Runtime: python3.6
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+      Timeout: 3
   DiscoverEdgeLambdaVersionsFunctionIamRole:
     Type: AWS::IAM::Role
     Properties:
@@ -690,7 +807,7 @@ Resources:
           # Creates a zipped JSON file output artifact with the version information of
           # the Edge functions. The file is sent to S3 in a location supplied by the
           # triggering CodePipeline execution job
-          def publish_versions(job):
+          def export_versions(job):
               output_artifact = job['data']['outputArtifacts'][0]
 
               versions = function_versions()
@@ -718,7 +835,7 @@ Resources:
               try:
                   job = event['CodePipeline.job']
 
-                  publish_versions(job)
+                  export_versions(job)
 
                   # Cleanup
                   put_job_success(job, '')
